<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/second_content_background"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_centerInParent="true"
    android:background="@drawable/drawable_background"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/relative_silent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_silent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_silent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_silent"
                android:layout_centerHorizontal="true"
                android:text="@string/silent"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_bluetooth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <ImageView
                android:id="@+id/bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_bluetooth" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bluetooth"
                android:layout_centerHorizontal="true"
                android:text="@string/bluetooth"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_sound"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <ImageView
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_sound" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sound"
                android:layout_centerHorizontal="true"
                android:text="@string/sound"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/relative_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <ImageView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_bluetooth" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location"
                android:layout_centerHorizontal="true"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/back"
                android:layout_centerHorizontal="true"
                android:text="@string/clean"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_volume_up"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <ImageView
                android:id="@+id/volume_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_volume_up" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/volume_up"
                android:layout_centerHorizontal="true"
                android:text="@string/volume_up"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/relative_brightness"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <ImageView
                android:id="@+id/brightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_brightness" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/brightness"
                android:layout_centerHorizontal="true"
                android:text="@string/brightness"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_flash_light"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <ImageView
                android:id="@+id/flashlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_bulb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/flashlight"
                android:layout_centerHorizontal="true"
                android:text="@string/flashlight"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_volume_down"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <ImageView
                android:id="@+id/volume_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_volume_down" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/volume_down"
                android:layout_centerHorizontal="true"
                android:text="@string/volume_down"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
