<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:elevation="0dp" />
    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="?actionBarSize"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/back_button"
            android:gravity="center_vertical"
            android:text="@string/icon_settings"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relative_icon"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_bubble" />

                <TextView
                    android:id="@+id/icon_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/icon"
                    android:text="@string/icon"
                    android:textColor="@color/black" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_header"
                    android:layout_toRightOf="@+id/icon"
                    android:text="@string/icon_sub_header" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative_size"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_select_all" />

                <TextView
                    android:id="@+id/size_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/size"
                    android:text="@string/size"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/size_sub_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/size_header"
                    android:layout_toRightOf="@+id/size"
                    android:text="@string/size_sub_header" />

                <SeekBar
                    android:id="@+id/size_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/size_sub_header"
                    android:layout_toRightOf="@+id/size" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative_alpha"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/alpha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_flip_black" />

                <TextView
                    android:id="@+id/alpha_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/alpha"
                    android:text="@string/alpha"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/alpha_sub_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/alpha_header"
                    android:layout_toRightOf="@+id/alpha"
                    android:text="@string/size_sub_header" />

                <SeekBar
                    android:id="@+id/alpha_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/alpha_sub_header"
                    android:layout_toRightOf="@+id/alpha" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>