<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:elevation="0dp" />
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="75dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relative_panel"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_content_paste" />

                <TextView
                    android:id="@+id/panel_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/icon"
                    android:text="@string/panel"
                    android:textColor="@color/black" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/panel_header"
                    android:layout_toRightOf="@+id/icon"
                    android:text="@string/panel_sub_header" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative_panel_background"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_format_paint" />

                <TextView
                    android:id="@+id/size_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/size"
                    android:text="@string/panel_background"
                    android:textColor="@color/black" />


            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>